[tool.poetry]
name = "expo-scraping"
version = "0.1.0"
description = ""
authors = ["lee-jangwon <leejangwon1995@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
pandas = "^2.2.2"
beautifulsoup4 = "^4.12.3"


[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^24.4.2"}
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
